Fix checkbox not visible and login UI

--- a/clients/DiveInsurance/view/apps/DiveInsurance/public/css/custom.css
+++ b/clients/DiveInsurance/view/apps/DiveInsurance/public/css/custom.css
@@ -216,7 +216,7 @@ label {
   opacity: .8;
   font-weight: 400;
 }
-/* input {
+.floating-label input {
   font-size: 16px;
   padding: 20px 0px;
   height: 56px;
@@ -229,7 +229,7 @@ label {
   color: #000;
   font-weight: 400;
   -webkit-appearance: none;
-} */
+}
 input:focus {
   border-bottom: solid 1px #275362;
   outline: 0;
